# xrayreco

./: .buildinfo  .gitignore  .travis.yml  README.md  dataprocessing.html  fitfacilities.html  genindex.html  index.html  nnmodels.html  objects.inv  predfile.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.sh  usage.html
.doctrees/: dataprocessing.doctree  environment.pickle  fitfacilities.doctree  index.doctree  nnmodels.doctree  predfile.doctree  usage.doctree
.github/workflows/: deploy_docs.yml
X-ray_hit_reconstruction/: preprocessing.py
Xray_hit_reconstruction/: preprocessing.py
_sources/: dataprocessing.rst.txt  fitfacilities.rst.txt  index.rst.txt
datasets/: hxsim_0ENC_01srcsigma_continuumspectrum.h5  hxsim_20ENC_01srcsigma_continuumspectrum.h5  hxsim_20ENC_01srcsigma_continuumspectrum_test.h5  hxsim_20ENC_01srcsigma_test.h5  hxsim_20ENC_01srcsigma_test_recon.h5  hxsim_40ENC_01srcsigma_continuumspectrum.h5
docs/: index.html
docs/source/: conf.py  index.rst  nnmodels.rst  predfile.rst  preprocessing.rst  usage.rst
tests/: test_preprocessing.py
training/: cp_e.weights.h5  cp_e_fulldata.weights.h5  cp_xy.weights.h5  cp_xy_fulldata.weights.h5
xrayreco/: __init__.py  analysis.py  dataprocessing.py  fitfacilities.py  nn_2_attempt.ipynb  nn_trial.ipynb  nnmodels.py  predfile.py  preprocessing.py
xrayreco/datasets/: hxsim_40ENC_uniform.h5
xrayreco/training_1/: cp.weights.h5  cp2.weights.h5  cp_e.weights.h5  cp_xy.weights.h5
xrayreco/training_2/: cp_xy2.weights.h5
xrayreco/tutorial/: nn_trial1.ipynb
(+4 files in other folders)
