[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
requires-python = ">=3.7"

[project]
name = "xrayreco"
version = "0.1"
dependencies = [
    "sphinx",
    "sphinxawesome_theme",
    "keras",
    "matplotlib",
    "numpy",
    "pathlib",
    "scikit-learn",
    "tables",
    "tqdm"
]
