[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
#py-modules = []

[project]
name = "xrayreco"
version = "0.1"
dependencies = [
    "sphinxawesome_theme"
]